# manpads

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
desktop-app/frontend/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
desktop-app/frontend/src/lib/: audio.ts  tauri.ts  theme.ts  types.ts
desktop-app/frontend/src/lib/__tests__/: types.test.ts
desktop-app/frontend/src/lib/components/: AuditFeed.svelte  CommandConsole.svelte  ConnectionStatus.svelte  EmergencyStop.svelte  FireConfirmModal.svelte  SettingsModal.svelte  ShortcutHud.svelte  TelemetryChart.svelte  TelemetryPanel.svelte
desktop-app/frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: audit.rs  commands.rs  error.rs  lib.rs  main.rs  settings.rs  state.rs
desktop-app/src-tauri/src/network/: mod.rs  pi_client.rs
docs/: architecture.md  pi-deployment.md  td-operator-manual.md
openspec/: config.yaml
openspec/specs/: network-protocol.md
pi-controller/: Cargo.toml
pi-controller/src/: config.rs  daemon.rs  error.rs  handler.rs  hardware.rs  lib.rs  main.rs
pi-controller/src/hardware/: actuators.rs  interlock.rs  mod.rs  sensors.rs  simulated.rs
pi-controller/src/network/: protocol.rs
pi-controller/tests/: integration_command_flow.rs  state_machine_proptest.rs
scripts/: manpads-controller.service  run-simulator.sh
