[package]
name = "pi-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.19"
