[package]
name = "pi-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "1"
anyhow = "1"
tokio-util = "0.7"
dotenvy = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.19"

[dev-dependencies]
proptest = "1"

[features]
default = ["json-transport"]
json-transport = []
cbor-transport = ["dep:serde_cbor"]

[dependencies.serde_cbor]
version = "0.11"
optional = true
