[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
pi-controller = { path = "../../pi-controller" }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
