[package]
name = "desktop-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rand = "0.8"
thiserror = "1"
anyhow = "1"
chrono = "0.4"
dotenvy = "0.15"
pi-controller = { path = "../../pi-controller" }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
